= Changelog `vzd-cli`

== Version 3.1.0

- Editieren der Einträge in der GUI
- Upgrade der GUI auf Angular 18 und neuesten Carbon Design System
- Bugfixes

== Version 3.0.0

- Unterstützung FHIR VZD FdV und Search Schnittstellen, s. `vzd-cli fhir`
- Neues Befehl für übergreifenden login: `vzd-cli login`
- Tägliche Überprüfung der Updates ist jetzt abschaltbar `vzd-cli config set updates.enabled true|false`
- Diverse Bugfixes

== Version 2.6.2
- TelematikID ist jetzt optional in `vzd-cli admin <ru|tu|pu> log`

== Version 2.6.1
- Set Februar/2024 werden OAuth2 Felder  refresh_token und session_state nicht mehr unterstützt. Beide Felder wurden optional gemacht.
- ktlint wurde auf die neueste Version aktualisiert

== Version 2.6.0
- Set Februar/2024 werden OAuth2 Felder  `refresh_token` und `session_state` nicht mehr unterstützt. Beide Felder wurden optional gemacht.
- ktlint wurde auf die neueste Version aktualisiert

== Version 2.6.0

- Abhängigkeiten und Build-Tools-Versionen aktualisiert
- Bugfixes

== Version 2.3.0
- `vzd-cli admin cert-info` ersetzt `vzd-cli admin <ru|tu|pu> cert-info`
- Abfrage der Änderungshistorie: `vzd-cli admin <ru|tu|pu> log`
- Validierungsergebnisse wurden in den Dump aufgenommen
- GUI Optimierungen

== Version 2.2.0
- Quellcode wurde in Vorbereitung der Web-Version des Clients modularisiert und umstrukturiert
- Microservice Client `directory-bff`
- Rudimentäre Validierung der Basiseinträge
- Versionen der Abhängigkeiten wurden aktualisiert
- Kompatibilität mit VZD 3.2.0 und Admin API 1.9.4
- `--human` Output Format ist jetzt deutlich kompakter und lesbar
- Neue Output Formate: `--yaml-ext` und `--json-ext`
- Zertifikate werden zu Smartcards gebündelt
- Attribut `kind` um welchen Eintrag es sich handelt (z.B. Apotheke oder Krankenhaus)
- `--meta` Option kann jetzt bei Anfragen genutzt werden

== Version 2.1.0
- CLI Interface wurde weitgehend überarbeiten un vereinfacht, s. Dokumentation