@@ -25,6 +25,11 @@ private val JSON =
         prettyPrint = true
     }
 
+val ResourceDirectoryEntries = "/DirectoryEntries"
+val ResourceDirectoryEntriesSync = "/v2/DirectoryEntriesSync"
+val ResourceDirectoryEntriesByKim = "/DirectoryEntries/KOM-LE_Fachdaten"
+val ResourceDirectoryEntriesSyncByKim = "/v2/DirectoryEntriesSync/KOM-LE_Fachdaten"
+
 class AdminResponseException(
     response: HttpResponse,
     message: String
@@ -159,31 +164,16 @@ class Client(
     }
 
     /**
-     * Implements GET /DirectoryEntriesSync (read_Directory_Entry_for_Sync_paging)
-     */
-    suspend fun readDirectoryEntryV2(
-        parameters: Map<String, String>,
-        cursorSize: Int = 100,
-        cookie: String? = null,
-    ): ReadDirectoryEntryForSyncResponse? = fetchNextEntries(parameters, cursorSize, cookie)
-
-    /**
-     * Implements GET /DirectoryEntriesSync (read_Directory_Entry_for_Sync)
-     */
-    @Deprecated("Use streamDirectoryEntriesPaging instaed")
-    suspend fun readDirectoryEntryForSync(parameters: Map<String, String>): List<DirectoryEntry>? =
-        readDirectoryEntry(parameters, "/DirectoryEntriesSync")
-
-    /**
      * Implements GET /DirectoryEntries (read_Directory_Entry)
+     * and GET /DirectoryEntries/KOM-LE_Fachdaten (search_Directory_FA_Attributes)
      */
     suspend fun readDirectoryEntry(
         parameters: Map<String, String>,
-        path: String = "/DirectoryEntries",
+        resource: String = ResourceDirectoryEntries,
     ): List<DirectoryEntry>? {
         logger.info { "readDirectoryEntry $parameters" }
         val response =
-            http.get(path) {
+            http.get(resource) {
                 for (param in parameters.entries) {
                     parameter(param.key, param.value)
                 }
@@ -203,17 +193,19 @@ class Client(
 
     /**
      * Implements GET /v2/DirectoryEntriesSync (read_Directory_Entry_for_Sync_paging)
+     * and GET /v2/DirectoryEntriesSync/KOM-LE_Fachdaten (read_Directory_FA_Attributes_for_Sync_paging)
      */
     suspend fun streamDirectoryEntriesPaging(
         parameters: Map<String, String>,
         cursorSize: Int = 500,
+        resource: String = ResourceDirectoryEntriesSync,
         sink: (entry: DirectoryEntry) -> Unit,
     ) {
         var cookie: String? = null
         coroutineScope {
             do {
                 logger.info { "Requesting $cursorSize entries, cookie: '$cookie'" }
-                val syncResponse = fetchNextEntries(parameters, cursorSize, cookie)
+                val syncResponse = fetchNextEntries(resource, parameters, cursorSize, cookie)
                 logger.info {
                     "Got ${syncResponse?.directoryEntries?.size ?: 0} entries, new cookie: '${syncResponse?.searchControlValue?.cookie ?: "none"}'"
                 }
@@ -226,12 +218,13 @@ class Client(
     }
 
     private suspend fun fetchNextEntries(
+        resource: String,
         parameters: Map<String, String>,
         cursorSize: Int,
         cookie: String?,
     ): ReadDirectoryEntryForSyncResponse? {
         val response =
-            http.get("/v2/DirectoryEntriesSync") {
+            http.get(resource) {
                 expectSuccess = false
                 for (param in parameters.entries) {
                     parameter(param.key, param.value)
