@@ -1,4 +1,3 @@
 package de.gematik.ti.directory.admin
 
-suspend fun Client.readDirectoryEntryByTelematikID(telematikID: String): DirectoryEntry? =
-    readDirectoryEntry(mapOf("telematikID" to telematikID))?.firstOrNull()
+suspend fun Client.readDirectoryEntryByTelematikID(telematikID: String): DirectoryEntry? = readDirectoryEntry(mapOf("telematikID" to telematikID))?.firstOrNull()
