@@ -74,6 +74,7 @@ data class BaseDirectoryEntry(
     // Misc
     var active: Boolean = true,
     var meta: List<String>? = null,
+    var providedBy: String? = null,
 )
 
 @Serializable
