@@ -2,7 +2,7 @@ package de.gematik.ti.directory.elaborate.specialcases
 
 import de.gematik.ti.directory.elaborate.ElaborateDirectoryEntry
 import de.gematik.ti.directory.elaborate.SpecialCase
-import de.gematik.ti.directory.fhir.PharmacyTypeCS
+import de.gematik.ti.directory.fhir.PharmacyHealthcareSpecialtyCS
 
 class PharmacySpecializationSpecialCase : SpecialCase {
     override fun apply(entry: ElaborateDirectoryEntry) {
@@ -12,7 +12,7 @@ class PharmacySpecializationSpecialCase : SpecialCase {
                     if (it.system != null) {
                         it
                     } else {
-                        PharmacyTypeCS.resolveCode(it.code) ?: it
+                        PharmacyHealthcareSpecialtyCS.resolveCode(it.code) ?: it
                     }
                 }
         }
