@@ -1,4 +1,4 @@
-version=3.1.0a1
+version=3.1.0a2
 ktorVersion=2.2.2
 kotestVersion=5.5.4
 hapiVersion=6.1.3
