@@ -6,7 +6,7 @@ import com.github.ajalt.clikt.core.requireObject
 import com.github.ajalt.clikt.parameters.groups.provideDelegate
 import com.github.ajalt.clikt.parameters.options.*
 import com.github.ajalt.clikt.parameters.types.path
-import de.gematik.ti.directory.admin.DirectoryEntry
+import de.gematik.ti.directory.admin.*
 import de.gematik.ti.directory.cli.OcspOptions
 import de.gematik.ti.directory.cli.catching
 import kotlinx.coroutines.runBlocking
@@ -50,9 +50,32 @@ class ListCommand : CliktCommand(name = "list", help = "List directory entries")
     private val sync by option(help = "use Sync mode").flag()
     private val ocspOptions by OcspOptions()
 
+    private val kimParameterOptions by KimParameterOptions()
+
     override fun run() =
         catching {
-            val params = parameterOptions.toMap() + customParams
+            val plainParams = parameterOptions.toMap() + customParams
+            val kimParams = kimParameterOptions.toMap()
+
+            // cant use both KIM and Query parameters
+            if (kimParams.isNotEmpty() && plainParams.isNotEmpty()) {
+                throw CliktError("Cannot use both plain and KIM query parameters")
+            }
+
+            val query: Triple<Map<String, String>, String, String> =
+                if (kimParams.isNotEmpty()) {
+                    Triple(
+                        kimParams,
+                        ResourceDirectoryEntriesByKim,
+                        ResourceDirectoryEntriesSyncByKim,
+                    )
+                } else {
+                    Triple(
+                        plainParams,
+                        ResourceDirectoryEntries,
+                        ResourceDirectoryEntriesSync,
+                    )
+                }
 
             val entries =
                 buildList {
@@ -61,11 +84,11 @@ class ListCommand : CliktCommand(name = "list", help = "List directory entries")
                         if (!file.exists()) throw CliktError("File not found: ${paramFile.second}")
                         file.useLines { line ->
                             line.forEach {
-                                runQuery(params + Pair(paramFile.first, it))?.let { addAll(it) }
+                                runQuery(query.first + Pair(paramFile.first, it), query.second, query.third)?.let { addAll(it) }
                             }
                         }
                     } ?: run {
-                        runQuery(params)?.let { addAll(it) }
+                        runQuery(query.first, query.second, query.third)?.let { addAll(it) }
                     }
                 }
 
@@ -78,18 +101,22 @@ class ListCommand : CliktCommand(name = "list", help = "List directory entries")
             }
         }
 
-    private fun runQuery(params: Map<String, String>): List<DirectoryEntry>? {
+    private fun runQuery(
+        params: Map<String, String>,
+        resource: String,
+        resourceSync: String
+    ): List<DirectoryEntry>? {
         val result: List<DirectoryEntry>? =
             if (sync) {
                 runBlocking {
                     buildList {
-                        context.client.streamDirectoryEntriesPaging(params) {
+                        context.client.streamDirectoryEntriesPaging(params, resource = resourceSync) {
                             add(it)
                         }
                     }
                 }
             } else {
-                runBlocking { context.client.readDirectoryEntry(params) }
+                runBlocking { context.client.readDirectoryEntry(params, resource = resource) }
             }
 
         if (ocspOptions.enableOcsp) {
