@@ -35,7 +35,7 @@ class ParameterOptions : OptionGroup(name = "Query parameters") {
     val baseEntryOnly by option("--baseEntryOnly").choice("true", "false")
     val active by option().choice("true", "false")
     val meta by option()
-    val mail by option()
+    val providedBy by option("--providedBy", metavar = "TELEMATIK_ID")
 
     fun toMap(): Map<String, String> {
         val self = this
